# agent-nexus

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
configs/: default.yml  development.yml  production.yml
docs/: api_reference.md  architecture.md  mcp_servers.md  memory_system.md  verification.md
examples/: code_review.py  data_analysis.py  debug_production_issue.py  research_and_report.py
frontend/: app.js  index.html  style.css
monitoring/mlflow/: setup.py
scripts/: sync_contact.py
src/: __init__.py  config.py  main.py
src/api/: __init__.py  middleware.py  routes.py  schemas.py
src/infra/: __init__.py  alerts.py  db.py  event_bus.py  logging.py  metrics.py  redis_client.py  vector_store.py
src/llm/: __init__.py  prompts.py  provider.py  structured_output.py
src/mcp/: __init__.py  client.py  protocol.py  registry.py
src/mcp/servers/: __init__.py  base_server.py  browser_server.py  code_exec_server.py  database_server.py  filesystem_server.py  http_server.py  search_server.py  shell_server.py
src/memory/: __init__.py  cag_manager.py  episodic.py  graph_memory.py  memory_router.py  rag_engine.py
src/orchestrator/: __init__.py  engine.py  executor.py  goal_parser.py  planner.py  state.py
src/perception/: __init__.py  audio_engine.py  code_analyzer.py  document_parser.py  metrics_parser.py  multimodal_fuser.py  vlm_engine.py
src/verification/: __init__.py  claim_checker.py  evidence_collector.py  recovery.py  verifier.py
tests/: conftest.py  production_smoke.py  production_smoke_report.json
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py
